refactor: 툴팁 아이콘, 색상 변경 및 터치 범위 늘림

--- a/android/app/src/main/res/drawable/ic_info.xml
+++ b/android/app/src/main/res/drawable/ic_info.xml
@@ -4,7 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M12,12L12,16.5M12,8.665V8.625M3,12C3,7.029 7.029,3 12,3C16.971,3 21,7.029 21,12C21,16.971 16.971,21 12,21C7.029,21 3,16.971 3,12Z"
+      android:pathData="M11.999,16.5V16.54M9.75,9.23C9.75,7.964 10.757,6.938 12,6.938C13.243,6.938 14.25,7.964 14.25,9.23C14.25,10.496 13.243,11.523 12,11.523C12,11.523 11.999,12.207 11.999,13.051M21,12C21,16.971 16.971,21 12,21C7.029,21 3,16.971 3,12C3,7.029 7.029,3 12,3C16.971,3 21,7.029 21,12Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
