--- a/android/app/src/main/res/layout/fragment_stats_my.xml
+++ b/android/app/src/main/res/layout/fragment_stats_my.xml
@@ -35,34 +35,30 @@
                 android:padding="20dp"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/constraint_my_chart"
+                <TextView
+                    android:id="@+id/tv_my_chart_title"
+                    style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/stats_my_pie_chart_title"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/tv_my_chart_title"
-                        style="@style/TextView.Pretendard.Bold.20"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/stats_my_pie_chart_title"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                <FrameLayout
+                    android:id="@+id/frame_my_chart_tooltip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_my_chart_title"
+                    app:layout_constraintStart_toEndOf="@id/tv_my_chart_title"
+                    app:layout_constraintTop_toTopOf="@id/tv_my_chart_title">
 
                     <ImageView
-                        android:id="@+id/ic_stadium_stats_info"
-                        android:layout_width="14dp"
-                        android:layout_height="14dp"
-                        android:layout_marginStart="4dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:src="@drawable/ic_info"
-                        app:layout_constraintBottom_toBottomOf="@id/tv_my_chart_title"
-                        app:layout_constraintStart_toEndOf="@id/tv_my_chart_title"
-                        app:layout_constraintTop_toTopOf="@id/tv_my_chart_title"
-                        app:tint="@color/gray400" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                        app:tint="@color/gray300" />
+                </FrameLayout>
 
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/pie_chart"
@@ -71,7 +67,7 @@
                     android:layout_marginTop="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/constraint_my_chart" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_my_chart_title" />
 
                 <TextView
                     android:id="@+id/tv_winning_percentage"
