--- a/android/app/src/main/res/layout/fragment_setting_main.xml
+++ b/android/app/src/main/res/layout/fragment_setting_main.xml
@@ -82,11 +82,20 @@
                 android:padding="20dp">
 
                 <include
-                    android:id="@+id/layout_edit_nickname"
+                    android:id="@+id/layout_edit_profile_image"
                     layout="@layout/item_setting_menu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:menuTitle="@{@string/setting_edit_profile_image}" />
+
+                <include
+                    android:id="@+id/layout_edit_nickname"
+                    layout="@layout/item_setting_menu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/layout_edit_profile_image"
                     app:menuTitle="@{@string/setting_edit_nickname}" />
 
                 <include
