--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -34,9 +34,19 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_gravity="center_vertical|end"
+                    android:layout_marginStart="16dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/setting_icon_description"
                     android:src="@drawable/ic_settings" />
+
+                <ImageView
+                    android:id="@+id/iv_badge"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/badge_icon_description"
+                    android:src="@drawable/ic_trophy" />
             </androidx.appcompat.widget.Toolbar>
 
             <androidx.fragment.app.FragmentContainerView
