feat: 현장톡방내 응원 버튼 내 팀 이모지 연동

--- a/android/app/src/main/res/layout/activity_livetalk_chat.xml
+++ b/android/app/src/main/res/layout/activity_livetalk_chat.xml
@@ -124,8 +124,9 @@
                 android:layout_marginBottom="16dp"
                 android:elevation="6dp"
                 android:gravity="center"
-                android:text="❤"
+                android:text="@{viewModel.myTeamEmoji}"
                 android:textSize="24sp"
+                android:visibility="@{viewModel.myTeam != null ? View.VISIBLE : View.GONE}"
                 app:layout_constraintBottom_toBottomOf="@id/rv_chat_messages"
                 app:layout_constraintEnd_toEndOf="@id/rv_chat_messages" />
 
