refactor: LivetalkChatViewModel 내 팀 정보 관련 로직 수정

--- a/android/app/src/main/res/layout/activity_livetalk_chat.xml
+++ b/android/app/src/main/res/layout/activity_livetalk_chat.xml
@@ -52,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="@{viewModel.livetalkResponseItem.stadiumName}"
+                android:text="@{viewModel.livetalkTeams.stadiumName}"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:text="@{@string/livetalk_away_home_name(viewModel.livetalkResponseItem.awayTeamName, viewModel.livetalkResponseItem.homeTeamName)}"
+                android:text="@{@string/livetalk_away_home_name(viewModel.livetalkTeams.awayTeam.shortname, viewModel.livetalkTeams.homeTeam.shortname)}"
                 android:visibility="@{viewModel.isStadiumLoading ? View.GONE : View.VISIBLE}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -123,9 +123,9 @@
                 android:layout_marginEnd="20dp"
                 android:elevation="6dp"
                 android:gravity="center"
-                android:text="@{viewModel.myTeamEmoji}"
+                android:text="@{viewModel.livetalkTeams.myTeamEmoji}"
                 android:textSize="24sp"
-                android:visibility="@{viewModel.myTeam != null ? View.VISIBLE : View.GONE}"
+                android:visibility="@{viewModel.livetalkTeams.myTeam != null ? View.VISIBLE : View.GONE}"
                 app:layout_constraintBottom_toBottomOf="@+id/floating_emojis_view"
                 app:layout_constraintEnd_toEndOf="@id/rv_chat_messages"
                 app:layout_constraintTop_toBottomOf="@+id/rv_chat_messages"
@@ -138,8 +138,8 @@
                 android:layout_height="wrap_content"
                 android:elevation="6dp"
                 android:gravity="center"
-                android:text="@{@string/livetalk_like_count_message(viewModel.myTeam.shortname, viewModel.myTeamLikeShowingCount)}"
-                android:visibility="@{viewModel.myTeam != null ? View.VISIBLE : View.GONE}"
+                android:text="@{@string/livetalk_like_count_message(viewModel.livetalkTeams.myTeam.shortname, viewModel.myTeamLikeShowingCount)}"
+                android:visibility="@{viewModel.livetalkTeams.myTeam != null ? View.VISIBLE : View.GONE}"
 
                 app:layout_constraintBottom_toTopOf="@+id/constraint_input_message"
                 app:layout_constraintEnd_toStartOf="@+id/tv_like_button"
@@ -165,7 +165,7 @@
                 app:layout_constraintBottom_toTopOf="@id/constraint_input_message"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_talk_divider_marginBottom="@{viewModel.myTeam != null ? @dimen/margin_my_team_active : @dimen/margin_team_default}"
+                app:layout_talk_divider_marginBottom="@{viewModel.livetalkTeams.myTeam != null ? @dimen/margin_my_team_active : @dimen/margin_team_default}"
                 tools:layout_marginBottom="50dp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -191,7 +191,7 @@
                     android:background="@null"
                     android:enabled="@{isVerified}"
                     android:gravity="center_vertical"
-                    android:hint="@{isVerified? @string/livetalk_chat_input_hint(viewModel.livetalkResponseItem.stadiumName) : @string/livetalk_chat_input_hint_unverified}"
+                    android:hint="@{isVerified? @string/livetalk_chat_input_hint(viewModel.livetalkTeams.stadiumName) : @string/livetalk_chat_input_hint_unverified}"
                     android:importantForAutofill="no"
                     android:inputType="textMultiLine"
                     android:maxLength="200"
