--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -255,7 +255,7 @@
                     android:background="@drawable/bg_stroke_gray300_radius_12dp"
                     android:onClick="@{() -> viewModel.toggleStadiumStats()}"
                     android:paddingVertical="8dp"
-                    android:visibility="@{viewModel.stadiumFanRateItems.size == 1 ? View.GONE : View.VISIBLE}"
+                    android:visibility="@{viewModel.isShowMoreVisible ? View.VISIBLE : View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/rv_stadium_fan_rate">
 
