feat: 취소된 경기 UI 대응

--- a/android/app/src/main/res/layout/layout_attendance_history.xml
+++ b/android/app/src/main/res/layout/layout_attendance_history.xml
@@ -19,7 +19,7 @@
             style="@style/TextView.Esamanru.Bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{String.valueOf(attendanceHistoryItem.awayTeam.score)}"
+            android:text="@{attendanceHistoryItem.awayTeam.score}"
             android:textSize="56dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +91,7 @@
             style="@style/TextView.Esamanru.Bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{String.valueOf(attendanceHistoryItem.homeTeam.score)}"
+            android:text="@{attendanceHistoryItem.homeTeam.score}"
             android:textSize="56dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
