feat: XML ComposeView 추가 및 승리 요정 랭킹 프로필 사진 클릭 핸들러 추가

--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -24,6 +24,14 @@
             android:paddingBottom="20dp"
             tools:context=".presentation.home.HomeFragment">
 
+            <androidx.compose.ui.platform.ComposeView
+                android:id="@+id/compose_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBaseline_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_check_in"
                 android:layout_width="match_parent"
