--- a/android/app/src/main/res/layout/item_victory_fairy.xml
+++ b/android/app/src/main/res/layout/item_victory_fairy.xml
@@ -46,7 +46,7 @@
             app:strokeColor="@color/gray300"
             app:strokeWidth="1dp"
             app:userProfileImage="@{victoryFairyItem.profileImageUrl}"
-            android:onClick="@{() -> handler.onProfileImageClick(victoryFairyItem)}"
+            android:onClick="@{() -> handler.onProfileImageClick(victoryFairyItem.memberId)}"
             tools:src="@drawable/ic_user" />
 
         <TextView
