feat: 직관 인증 여부 확인 후 추가 인증 기능 구현

--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
-                android:backgroundTint="@{viewModel.hasAlreadyCheckedIn ? @color/primary050 : @color/primary500}"
+                android:backgroundTint="@{@color/primary500}"
                 app:cardCornerRadius="100dp"
                 app:cardElevation="8dp"
                 app:layout_constraintTop_toTopOf="parent">
@@ -41,15 +41,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/color_button_bg_selector"
-                    android:enabled="@{viewModel.hasAlreadyCheckedIn ? false : true}"
                     android:paddingVertical="12dp"
-                    android:text="@{viewModel.hasAlreadyCheckedIn ? @string/home_already_checked_in : @string/home_check_in}"
-                    android:textColor="@{viewModel.hasAlreadyCheckedIn ? @color/primary700 : @color/white}"
+                    android:text="@{@string/home_check_in}"
+                    android:textColor="@{@color/white}"
                     app:icon="@drawable/ic_marker_pin"
                     app:iconGravity="textStart"
                     app:iconPadding="8dp"
                     app:iconSize="24dp"
-                    app:iconTint="@{viewModel.hasAlreadyCheckedIn ? @color/primary700 : @color/white}"
+                    app:iconTint="@{@color/white}"
                     app:rippleColor="@android:color/transparent"
                     tools:text="@string/home_check_in"
                     tools:textColor="@color/white" />
