fix: 누락된 constraint 추가

--- a/android/app/src/main/res/layout/item_livetalk_other_bubble.xml
+++ b/android/app/src/main/res/layout/item_livetalk_other_bubble.xml
@@ -26,7 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@id/tv_chat_body"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_profile"
