refactor: 현장톡 ViewModel 상태 관리를 StateHolder로 분리
- MessageStateHolder: 채팅 상태 관리 홀더
- LikeCountsStateHolder: 좋아요 상태 관리 홀더

--- a/android/app/src/main/res/layout/activity_livetalk_chat.xml
+++ b/android/app/src/main/res/layout/activity_livetalk_chat.xml
@@ -145,7 +145,7 @@
                 android:layout_height="wrap_content"
                 android:elevation="6dp"
                 android:gravity="center"
-                android:text="@{@string/livetalk_like_count_message(viewModel.livetalkTeams.myTeam.shortname, viewModel.myTeamLikeShowingCount)}"
+                android:text="@{@string/livetalk_like_count_message(viewModel.livetalkTeams.myTeam.shortname, viewModel.likeCountStateHolder.myTeamLikeShowingCount)}"
                 android:visibility="@{viewModel.livetalkTeams.myTeamType != null ? View.VISIBLE : View.GONE}"
 
                 app:layout_constraintBottom_toTopOf="@+id/constraint_input_message"
@@ -204,7 +204,7 @@
                     android:maxLines="4"
                     android:minHeight="16dp"
                     android:scrollHorizontally="false"
-                    android:text="@={viewModel.messageFormText}"
+                    android:text="@={viewModel.messageStateHolder.messageFormText}"
                     android:textColor="@color/gray900"
                     android:textColorHint="@color/gray500"
                     android:textSize="16sp"
@@ -222,7 +222,7 @@
                 android:layout_height="40dp"
                 android:layout_marginVertical="16dp"
                 android:layout_marginEnd="20dp"
-                android:background="@{viewModel.canSendMessage ? @drawable/bg_primary500_radius_12dp_ripple : @drawable/bg_gray400_radius_12dp}"
+                android:background="@{viewModel.messageStateHolder.canSendMessage ? @drawable/bg_primary500_radius_12dp_ripple : @drawable/bg_gray400_radius_12dp}"
                 android:enabled="@{isVerified}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
